# avalon

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
avalon/: cli.py  constants.py  models.py  pathing.py  pipeline.py  state.py  watcher.py
avalon/analysis/: essentia_analyzer.py  model_cache.py
avalon/conversion/: converter.py
avalon/identity/: acoustid_client.py  credentials.py  discogs_client_wrapper.py  identity_resolver.py  musicbrainz_client.py  rate_limit.py
avalon/tagging/: analysis_blob.py  cover_art.py  identity_blob.py  tag_writer.py
scripts/: benchmark_analyze.py
tests/: test_analysis_blob.py  test_cli.py  test_identity_blob.py  test_identity_resolver.py  test_pathing.py  test_pipeline.py  test_tag_writer.py
