[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libavalon"
version = "0.0.2"
description = "Standalone audio analysis, tagging, and organization CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "abelsonlive" },
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "essentia-tensorflow==2.1b6.dev1110",
    "numpy<2",
    "ffmpeg-python>=0.2.0",
    "mutagen>=1.48.0",
    "watchdog>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
avalon = "avalon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["avalon"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/fixtures"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
